Header image and text styling

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Portfolio | Rashel Ochoa</title>
+    <title>Portfolio | Rashel Ochoa</title>
+    <!-- Material Design Lite -->
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-orange.min.css" />
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <header>
